[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "aa_pbs_exporter"
description = "Convert AA PBS pairing package .pdf to .json"
# readme = "README.rst"
requires-python = ">=3.10"
keywords = ["Python", "aa_pbs_exporter"]
license = { file = "LICENSE" }
# 
# urls = { Home-page = "https://github.com/DonalChilde/aa_pbs_exporter" }
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click",
    "pdfminer.six",
    "pyparsing",
    "airportsdata",
    "pydantic",
]
version = "v0.0.0"

[project.urls]
Documentation = "https://github.com/DonalChilde/aa_pbs_exporter#readme"
Documentation_rtd = "https://aa_pbs_exporter.readthedocs.io"
Issues = "https://github.com/DonalChilde/aa_pbs_exporter/issues"
Source = "https://github.com/DonalChilde/aa_pbs_exporter"

[project.optional-dependencies]
dev = [

    # Automation
    "nox",
    "pre-commit",

    # Linting and Formatting
    "black",
    "isort",

    # Tools
    "pysnooper",
]
lint = ["pylint", "mypy"]
doc = [
    # Documentation
    "Sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "myst-parser",
    "sphinx-click",
]
vscode = ["esbonio", "rst2html", "rstcheck"]
testing = ["pytest", "coverage", "pytest-cov"]


[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pylint.format]
# for black compatability
max-line-length = "92"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[project.scripts]
aa-pbs-exporter = "aa_pbs_exporter.cli.cli_main:cli"
